--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
     <!-------- INIZIO HEADER -------->
     <header>
         <div id="app-header">
-            <section>
-                <!-- logo e barra di navigazione -->
-            </section>
 
-            <section>
-                <!-- jumbotron -->
-            </section>
+            <!-- logo e barra di navigazione -->
+            <div class="container">
 
-            <section>
-                <!-- barra  -->
-            </section>
+            </div>
+
+
         </div>
     </header>
     <!-------- FINE -------->
@@ -37,25 +33,45 @@
     <!-------- INIZIO MAIN -------->
     <main>
 
-
-        <section>
-            <!-- welcom to fable -->
-        </section>
-
-        <section>
-            <!-- informazioni-A -->
-        </section>
-
         <section>
             <!-- carosel-A -->
         </section>
 
         <section>
+            <!-- barra  -->
+            <div class="container">
+
+            </div>
+        </section>
+
+
+        <section class="container">
+            <!-- welcom to fable -->
+        </section>
+
+        <section>
+            <!-- informazioni-A -->
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section>
+            <!-- carosel-B -->
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="container">
             <!-- our class -->
         </section>
 
         <section>
             <!-- informazioni-B -->
+            <div class="container">
+
+            </div>
         </section>
 
         <section>
@@ -65,18 +81,24 @@
 
             <div>
                 <!-- barra -->
+                <div class="container">
+
+                </div>
             </div>
         </section>
 
-        <section>
+        <section class="container">
             <!-- meet our staff -->
         </section>
 
         <section>
-            <!-- carosel-B -->
+            <!-- carosel-C -->
+            <div class="container">
+
+            </div>
         </section>
 
-        <section>
+        <section class="container">
             <!-- what's news -->
         </section>
 
@@ -84,7 +106,7 @@
             <!-- mappa -->
         </section>
 
-        <section>
+        <section class="container">
             <!-- contact us-->
         </section>
     </main>
@@ -95,11 +117,11 @@
     <footer>
         <div id="app-footer">
 
-            <div class="top">
+            <div class="top container">
                 <!-- parte sopra del footer -->
             </div>
 
-            <div class="bottom">
+            <div class="bottom container">
                 <!-- parte sotto del footer -->
             </div>
 
