main: welcom, our-class e staff (versione grezza)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- barra-A -->
         <section class="barra">
             <div class="container flex">
-                <p class="font-big">How to Enroll Your Child to a Class?</p>
+                <p class="font-medium">How to Enroll Your Child to a Class?</p>
 
                 <a href="#" class="button">
                     <span>Learn More</span>
@@ -65,38 +65,59 @@
 
         <!-- welcom to fable -->
         <section class="welcome container">
-            <div class="title">
-                <h1>Welcome to Fable</h1>
-                <p>loremloremlorem</p>
+            <div class="title-box">
+                <p class="title font-big">Welcome to Fable</p>
+                <p class="gray">Fable daycare, preschool, and kindergarten</p>
+                <img src="images/header_divider.png" alt="">
             </div>
 
-            <div class="circle flex">
+            <div class="flex">
                 <div class="box">
-                    <p>cerchio</p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem dicta cupiditate exercitationem aut,
-                    distinctio numquam blanditiis, animi quis error ab itaque quisquam ducimus natus consectetur esse
-                    aliquid adipisci accusamus iusto.
+
+                    <div class="circle orange-background">
+                        <img class="absolute" src="images/schoolbag_alt.png" alt="">
+                    </div>
+
+                    <h1 class="orange-color">Morbi Etos</h1>
+                    <span class="text gray">Praesent interdum est gravida vehicula est node maecenas loareet morbi a
+                        dosis luctus novum est praesent.</span>
+
                 </div>
 
                 <div class="box">
-                    <p>cerchio</p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod fugiat accusantium, ut
-                    rerum facere nemo, sit deleniti vitae voluptate atque natus enim quibusdam recusandae ipsum
-                    temporibus exercitationem nulla labore.
+
+                    <div class="circle violet-background">
+                        <img class="absolute" src="images/stroller_alt.png" alt="">
+                    </div>
+
+                    <h1 class="violet-color">Congue Gravida</h1>
+                    <span class="text gray">Elipsis magna a terminal nulla elementum morbi elite forte maecenas est
+                        magna etos interdum vitae est.</span>
+
                 </div>
 
                 <div class="box">
-                    <p>cerchio</p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod fugiat accusantium, ut
-                    rerum facere nemo, sit deleniti vitae voluptate atque natus enim quibusdam recusandae ipsum
-                    temporibus exercitationem nulla labore.
+
+                    <div class="circle orange-background">
+                        <img class="absolute" src="images/globe_alt.png" alt="">
+                    </div>
+
+                    <h1 class="orange-color">Maecenas Node</h1>
+                    <span class="text gray">Praesent interdum est gravida vehicula est node maecenas loareet morbi a
+                        dosis luctus novum est praesent.</span>
+
                 </div>
 
                 <div class="box">
-                    <p>cerchio</p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quod fugiat accusantium, ut
-                    rerum facere nemo, sit deleniti vitae voluptate atque natus enim quibusdam recusandae ipsum
-                    temporibus exercitationem nulla labore.
+
+                    <div class="circle violet-background">
+                        <img class="absolute" src="images/bell_alt.png" alt="">
+                    </div>
+
+                    <h1 class="violet-color">Praesent Morbi</h1>
+                    <span class="text gray">Elipsis magna a terminal nulla elementum morbi elite forte maecenas est
+                        magna etos interdum vitae est.</span>
+
                 </div>
             </div>
         </section>
@@ -126,8 +147,8 @@
                             <span class="absolute font-big">100</span>
                         </div>
 
-                        <p class="title">Our Pupils</p>
-                        <span class="text font-small">Pulvinar forte maestro node terminal est elipsis prism.</span>
+                        <h1>Our Pupils</h1>
+                        <span class="text">Pulvinar forte maestro node terminal est elipsis prism.</span>
 
                     </div>
 
@@ -137,8 +158,8 @@
                             <span class="absolute font-big">100</span>
                         </div>
 
-                        <p class="title">Teaching Hours</p>
-                        <span class="text font-small">Elipsis morbi nulla a metro interdum vitae elite.</span>
+                        <h1>Teaching Hours</h1>
+                        <span class="text">Elipsis morbi nulla a metro interdum vitae elite.</span>
 
                     </div>
 
@@ -148,8 +169,8 @@
                             <span class="absolute font-big">100</span>
                         </div>
 
-                        <p class="title">Satisfied Parents</p>
-                        <span class="text font-small">Elementum pulvinar detos diaspis movum blandit.</span>
+                        <h1>Satisfied Parents</h1>
+                        <span class="text">Elementum pulvinar detos diaspis movum blandit.</span>
 
                     </div>
 
@@ -159,13 +180,13 @@
                             <span class="absolute font-big">100</span>
                         </div>
 
-                        <p class="title">Meals Per Year</p>
-                        <span class="text font-small">Pulvinar forte maestro node terminal est elipsis prism.</span>
+                        <h1>Meals Per Year</h1>
+                        <span class="text">Pulvinar forte maestro node terminal est elipsis prism.</span>
 
                     </div>
 
                 </div>
-                
+
                 <div>
                     <div class="squere active"></div>
                     <div class="squere"></div>
@@ -179,37 +200,65 @@
 
         <!-- our class -->
         <section class="our-class container">
-            <div class="title">
-                Our Classes
-                <p>loremloremlorem</p>
+            <div class="title-box">
+                <p class="title font-big">Our Classes</p>
+                <p class="gray">Our preschool program has four dedicated classes</p>
+                <img src="images/header_divider.png" alt="">
             </div>
 
             <div class="text flex">
-                <div class="text-right">
-                    testo
+
+                <div class="text-left font-medium">
+                    We provided four classes with nine to twenty children each aged twelve month to five years of age.
                 </div>
 
-                <div class="text-left">
-                    testo
+                <div class="text-right">
+                    Praesent arcu gravida vehicula est node maecenas loareet morbi a dosis luctus. Urna eget lacinia
+                    eleifend praesent luctus a arcu quis facilisis venenatis. Aenean interdum, nibh vitae sodales, magna
+                    ante feugiat elit maecenas.
                 </div>
 
             </div>
 
-            <div class="images flex">
-                <div class="box">
-                    testo con immagine
+            <div class="image flex">
+                <div class="box sx">
+
+                    <div>
+                        testo con immagine sx
+                    </div>
+
+                    <img src="images/class_01-690x506.jpg" alt="">
+
                 </div>
 
-                <div class="box">
-                    testo con immagine
+                <div class="box dx">
+
+                    <div>
+                        testo con immagine sx
+                    </div>
+
+                    <img src="images/class_02-690x506.jpg" alt="">
+
                 </div>
 
-                <div class="box">
-                    testo con immagine
+                <div class="box sx">
+
+                    <div>
+                        testo con immagine sx
+                    </div>
+
+                    <img src="images/class_03-690x506.jpg" alt="">
+
                 </div>
 
-                <div class="box">
-                    testo con immagine
+                <div class="box dx">
+
+                    <div>
+                        testo con immagine sx
+                    </div>
+
+                    <img src="images/class_04-690x506.jpg" alt="">
+
                 </div>
             </div>
         </section>
@@ -249,7 +298,7 @@
         <!-- barra-B -->
         <section class="barra">
             <div class="container flex">
-                <p class="font-big">Lorem ipsum dolor, sit amet consectetur adipisicing elit?</p>
+                <p class="font-medium">Lorem ipsum dolor, sit amet consectetur adipisicing elit?</p>
 
                 <a href="#" class="button">
                     <span>Learn More</span>
@@ -261,37 +310,63 @@
         <!-- meet our staff -->
         <section class="staff container">
 
-            <div class="title">
-                Our Classes
-                <p>loremloremlorem</p>
+            <div class="title-box">
+                <p class="title font-big">Meet our Staff</p>
+                <p class="gray">loremloremlorem</p>
+                <img src="images/header_divider.png" alt="">
             </div>
 
             <div class="text flex">
-                <div class="text-right">
-                    testo
+                <div class="text-right font-medium">
+                    Our staff consists of three teachers and one assistant with experience in early childhood care.
                 </div>
 
-                <div class="text-left">
-                    testo
+                <div class="text-left gray">
+                    Praesent arcu gravida vehicula est node maecenas loareet morbi a dosis luctus. Urna eget lacinia
+                    eleifend praesent luctus a arcu quis facilisis venenatis. Aenean interdum, nibh vitae sodales, magna
+                    ante feugiat elit maecenas.
                 </div>
 
             </div>
 
-            <div class="images flex">
-                <div class="box">
-                    immagine con testo
+            <div class="image flex">
+                <div class="box sx">
+
+                    <img src="images/team_04.jpg" alt="">
+
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, recusandae tempora molestiae commodi hic error nam ducimus, porro esse temporibus optio magni veniam, ex laudantium. Nulla iste adipisci pariatur mollitia.
+                    </div>
+
                 </div>
 
-                <div class="box">
-                    immagine con testo
+                <div class="box dx">
+
+                    <img src="images/team_03.jpg" alt="">
+
+                    <div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil iure molestias quasi tempore dicta commodi, consequatur est veritatis neque nemo, animi doloribus voluptas aspernatur expedita, quis esse suscipit? Dicta, placeat!
+                    </div>
+
                 </div>
 
-                <div class="box">
-                    immagine con testo
+                <div class="box sx">
+
+                    <img src="images/team_02.jpg" alt="">
+
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat officia veniam, nostrum quia modi cum cupiditate dolores, vitae odit ipsum dolorem obcaecati nihil. Dicta dolor consequatur cumque ducimus corporis corrupti.
+                    </div>
+
                 </div>
 
-                <div class="box">
-                    immagine con testo
+                <div class="box dx">
+                    <img src="images/team_01.jpg" alt="">
+
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis maxime, sequi eius, facere error dolorum sed minima aspernatur accusantium quaerat dicta provident. Similique dolores deleniti atque corporis ullam, voluptatem tenetur.
+                    </div>
+
                 </div>
             </div>
 
@@ -305,7 +380,7 @@
                     <img class="absolute" src="images/quote_alt.png" alt="">
                 </div>
 
-                <p class="font-big">Fable Kindergarten is a great place for my daughter to start her schooling
+                <p class="font-medium">Fable Kindergarten is a great place for my daughter to start her schooling
                     experience. It’s welcoming and safe and my daughter loves being there.</p>
 
                 <div class="line"></div>
@@ -325,8 +400,10 @@
 
         <!-- what's news -->
         <section class="news container">
-            <div class="title">
-                lorem
+            <div class="title-box">
+                <p class="title font-big">lorem</p>
+                <p class="gray">loremloremlorem</p>
+                <img src="images/header_divider.png" alt="">
             </div>
 
             <div class="images flex">
@@ -353,9 +430,10 @@
 
         <!-- contact us-->
         <section class="contact container">
-            <div class="title">
-                <h1>lorem</h1>
-                <p>loremloremlorem</p>
+            <div class="title-box">
+                <p class="title font-big">lorem</p>
+                <p class="gray">loremloremlorem</p>
+                <img src="images/header_divider.png" alt="">
             </div>
 
 
@@ -496,7 +574,7 @@
             <div class="social">
                 <a href="#" v-for="social in socialLinks"><img :src="social" alt=""></a>
             </div>
-            <div class="copyright font-small">© Fable - Children Kindergarten WordPress Theme by QuanticaLabs</div>
+            <div class="copyright font-small gray">© Fable - Children Kindergarten WordPress Theme by QuanticaLabs</div>
         </div>
 
     </footer>
